--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,19 +8,14 @@
 	<!-- to connect the dispatcher servlet and applicationContext -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>
-			/WEB-INF/onlineShop-servlet.xml,
+		<param-value>/WEB-INF/onlineShop-servlet.xml,
 			/WEB-INF/applicationContext.xml
 		</param-value>
 	</context-param>
 
 	<filter>
-		<filter-name>
-			springSecurityFilterChain
-		</filter-name>
-		<filter-class>
-			org.springframework.web.filter.DelegatingFilterProxy
-		</filter-class>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
 
 	<filter-mapping>
@@ -30,9 +25,7 @@
 
 	<!-- it is used to listen the contextloader -->
 	<listener>
-		<listener-class>
-			org.springframework.web.context.ContextLoaderListener
-		</listener-class>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
 	<servlet>
